# rattler-prefix-bug-repro

./: .gitignore  Cargo.toml  README.md  pixi.toml
harness/: Cargo.toml
harness/src/: main.rs
victim/: Cargo.toml
victim/src/: main.rs
